# reader3

./: .gitignore  CHANGELOG.md  README.md  Reader3.spec  ai_settings.json  ai_settings.py  build_executable.py  launcher.py  orpheus_tts.py  pyproject.toml  reader3.py  server.py  user_data.json  user_data.py
.github/workflows/: build-release.yml
static/: manifest.json  sw.js
templates/: library.html  reader.html
tests/: test_reader3.py  test_server.py  test_user_data.py
