[project]
name = "reader3"
version = "1.5.0"
description = "Simple EPUB reader web app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ebooklib>=0.20",
    "fastapi>=0.124.0",
    "jinja2>=3.1.6",
    "uvicorn>=0.38.0",
    "python-multipart>=0.0.20",
    "pyinstaller>=6.17.0",
    "pymupdf>=1.26.6",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.1",
]
tts = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
    "sounddevice>=0.4.4",
    "snac>=1.2.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
